2019-1/221/users/3061/executions/1818_2567.log
== TEST (2019-06-11 08:39:44) 
-- CODE:
a = input("Coloque quantos asteriscos voce quiser:")
i = -1
vazio = ''
while -size(a)<i:
	vazio[i] = a[i] - "*"
	print(vazio)
	i = i - 1 

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while -size(a)<i:
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:40:01) 
-- CODE:
a = input("Coloque quantos asteriscos voce quiser:")
i = -1
vazio = ''
while -len(a)<i:
	vazio[i] = a[i] - "*"
	print(vazio)
	i = i - 1 

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while -size(a)<i:
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:53:10) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
i = 0
a = ''
while i < n: 
	a = a + '*'
	print(a)
	
	
	


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:53:46) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
i = 0
a = ''
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:54:33) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
i = 0
a = ''




while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:58:52) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
i = -1
a = ''
b = ''
while i<n:
	b[i] = b[i] + '*'
	i = i - 1 
	print(b)




i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b[i] = b[i] + '*'
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:05:12) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
b = ''
i1 = -1 
while i1>-len(v):
	b = [z for z in v if z!=v[i1]]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a = a + '*'
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:05:36) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = [z for z in v if z!=v[i1]]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
[]
[]
[]
[]
[]
[]
[]
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:08:16) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = v[:i]
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:08:27) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i1]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:10:04) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i1-1]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:10:54) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*n
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i1]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:12:30) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*(n+1)
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i1]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 09:13:03) 
-- CODE:
n = int(input("Coloque a quantidade de asteriscos que voce quer:"))
v = '*'*(n+1)
a = ''
b = ''
i1 = -1 
while i1>-len(v):
	b = v[:i1]
	print(b)
	i1 = i1 - 1 
i = 0
while i < n: 
	a = a + '*'
	print(a)
	i = i + 1
	
	
	


	
-- EXECUTION TIME:
0.574532
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
